# Guitutor

./: README.md  pyproject.toml
config/: calib.yaml  default.yaml  fingerings.yaml
src/guitutor/: __init__.py  cli.py
src/guitutor/domain/: fretboard.py
src/guitutor/eval/: evaluator.py  fingering.py
src/guitutor/vision/: calibration.py  hand_tracker.py  overlay.py  runner.py
tests/: test_rules.py
